crates/zizmor/tests/integration/snapshots/integration__cli__stdin_dependabot.snap
---
source: crates/zizmor/tests/integration/cli.rs
expression: "zizmor().stdin(dependabot).no_config(true).args([\"-\"]).run()?"
---
warning[dependabot-cooldown]: insufficient cooldown in Dependabot updates
 --> <stdin>:3:5
  |
3 |   - package-ecosystem: github-actions
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing cooldown configuration
  |
  = note: audit confidence → High
  = note: this finding has an auto-fix

1 findings (1 fixable): 0 informational, 0 low, 1 medium, 0 high
