crates/zizmor/tests/integration/snapshots/integration__cli__stdin_empty.snap
---
source: crates/zizmor/tests/integration/cli.rs
expression: "zizmor().stdin(\"\").no_config(true).expects_failure(3).args([\"-\"]).run()?"
---
🌈 zizmor v@@VERSION@@
 WARN collect_inputs: zizmor::registry::input: stdin: could not parse as any known input type: failed to load file://<stdin> as workflow
fatal: no audit was performed
error: no inputs collected
  |
  = help: collection yielded no auditable inputs
  = help: inputs must contain at least one valid workflow, action, or Dependabot config

Caused by:
    no inputs collected
